feat(topic): 新增 gc_view 实践笔记